# shadPS4-retroarch

./: .gitignore  plan.md
.github/scripts/: jules-resolve-conflicts.sh  upstream-sync.sh
.github/workflows/: jules-conflict-resolver.yml  upstream-sync.yml
tools/retroarch_mcp/: pyproject.toml
tools/retroarch_mcp/retroarch_mcp/: __init__.py  models.py  openrouter.py  retroarch.py  runner.py  server.py  utils.py
tools/retroarch_mcp/tests/: smoke-menu.json
