[project]
name = "retroarch-mcp"
version = "0.1.0"
description = "MCP stdio server for RetroArch end-to-end testing"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "GPL-2.0-or-later" }
authors = [{ name = "shadPS4 RetroArch Fork" }]

dependencies = [
  "mcp>=1.8.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
retroarch-mcp = "retroarch_mcp.server:main"

[tool.setuptools]
packages = ["retroarch_mcp"]
